syntax = "proto3";

package version;

service Version {
  rpc Get (GetRequest) returns (GetReply);
}

message Info {
  string version = 1;
  string build = 2;
  string go_version = 3;
  string os = 4;
  string arch = 5;
}

message GetRequest {
}

message GetReply {
  Info info = 1;
}
